--- a/packages/audio-video-view/src/style/index.css
+++ b/packages/audio-video-view/src/style/index.css
@@ -17,3 +17,39 @@ html, body {
 #app {
 	height: 100%;
 }
+
+.stream {
+	position: relative;
+	border-radius: 8px;
+	max-width: 640px;
+	margin: 20px;
+	border: 1px solid #fff;
+	overflow: hidden;
+}
+
+.stream__lower {
+	position: absolute;
+	display: flex;
+	left: 0;
+	bottom: 0;
+	align-items: center;
+	padding: 0 20px 10px 20px;
+}
+
+.streams {
+	display: flex;
+	align-items: center;
+	padding: 80px 0;
+}
+
+@media only screen and (max-width: 1280px) {
+	.streams {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	
+}
+
+@media only screen and (max-width: 1200px) {
+}
