fix(video) - Updated the styling

--- a/packages/audio-video-view/src/style/app.css
+++ b/packages/audio-video-view/src/style/app.css
@@ -1,7 +1,6 @@
 #preact_root {
-  height: 100%;
-  width: 100%;
   background-color: black;
+  /* height: inherit; */
 }
 
 #preact_root:hover > .overlay {
