--- a/packages/audio-video-view/src/style/index.css
+++ b/packages/audio-video-view/src/style/index.css
@@ -8,6 +8,7 @@ html, body {
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background-color: black;
 }
 
 * {
