fix(video) - Minor style updates

--- a/packages/audio-video-view/src/style/index.css
+++ b/packages/audio-video-view/src/style/index.css
@@ -3,12 +3,11 @@ html, body {
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background: #FAFAFA;
 	font-family: 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-color: black;
+	background-color: black !important;
 }
 
 * {
