--- a/packages/mini-chat-view/src/components/MessageItem/index.scss
+++ b/packages/mini-chat-view/src/components/MessageItem/index.scss
@@ -7,4 +7,78 @@
   grid-template-columns: 60px 1fr;
   column-gap: var(--j-space-500);
   row-gap: var(--j-space-300);
+ 
+  &:hover {
+    background: rgba(0, 0, 0, 0.02);
+  }
+
+  & .timestampLeft {
+    opacity: 0;
+  }
+
+  &:hover .timestampLeft {
+    opacity: 1;
+  }
+
+  & .chat-view-toolbar {
+    position: absolute;
+    opacity: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 40px;
+    background: none;
+    -webkit-app-region: drag;
+  }
+
+  &:hover .chat-view-toolbar {
+    opacity: 1;
+  }
+
+  & .messageItemContent p:first-of-type {
+    margin-top: 0;
+  }
+
+  & .messageItemContent p:last-of-type {
+    margin-bottom: 0;
+  }
+
+  & [data-mention] {
+    cursor: pointer;
+    padding: 2px var(--j-space-200);
+    border-radius: var(--j-border-radius);
+    background: var(--j-color-primary-100);
+    color: var(--j-color-primary-700);
+  }
+
+  & .messageUsername {
+    color: var(--j-color-ui-600);
+    font-size: var(--j-font-size-500);
+    font-weight: 400;
+    margin-bottom: var(--j-space-400);
+  }
+
+  & .messageUsernameNoMargin {
+    color: var(--j-color-ui-600);
+    font-size: var(--j-font-size-500);
+    font-weight: 400;
+  }
+}
+
+.replyLine {
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 70%;
+  height: 15px;
+  border-left: 2px solid var(--j-color-ui-200);
+  border-top: 2px solid var(--j-color-ui-200);
+  border-top-left-radius: var(--j-border-radius);
+}
+
+.messageFlex {
+  display: flex;
+  gap: var(--j-space-500);
+  align-items: center;
 }
