--- a/packages/mini-chat-view/src/components/MessageItem/index.scss
+++ b/packages/mini-chat-view/src/components/MessageItem/index.scss
@@ -7,7 +7,7 @@
   grid-template-columns: 60px 1fr;
   column-gap: var(--j-space-500);
   row-gap: var(--j-space-300);
- 
+
   &:hover {
     background: rgba(0, 0, 0, 0.02);
   }
@@ -65,6 +65,10 @@
   }
 }
 
+.replyLineWrapper {
+  position: relative;
+}
+
 .replyLine {
   display: block;
   position: absolute;
@@ -81,4 +85,15 @@
   display: flex;
   gap: var(--j-space-500);
   align-items: center;
+}
+
+.messageToolbar {
+  display: flex;
+  position: absolute;
+  z-index: 100;
+  background: var(--j-color-white);
+  border-radius: var(--j-border-radius);
+  box-shadow: var(--j-depth-100);
+  top: -10px;
+  right: var(--j-space-500);
 }
