--- a/packages/mini-chat-view/src/components/TipTap/index.scss
+++ b/packages/mini-chat-view/src/components/TipTap/index.scss
@@ -12,22 +12,24 @@
 .editorContent {
   width: 100%;
   padding-top: var(--j-space-200);
+}
 
-  & .ProseMirror p:first-of-type {
+.editorParagraph {
+  &:first-of-type {
     padding-top: 0;
     margin-top: 0;
   }
 
-  & .ProseMirror p:last-of-type {
+  &:last-of-type {
     padding-bottom: 0;
     margin-bottom: 0;
   }
+}
 
-  & .mention {
-    cursor: pointer;
-    padding: 2px var(--j-space-200);
-    border-radius: var(--j-border-radius);
-    background: var(--j-color-primary-100);
-    color: var(--j-color-primary-700);
-  }
+.editorMentions {
+  cursor: pointer;
+  padding: 2px var(--j-space-200);
+  border-radius: var(--j-border-radius);
+  background: var(--j-color-primary-100);
+  color: var(--j-color-primary-700);
 }
