--- a/packages/mini-chat-view/src/components/MessageItem/index.scss
+++ b/packages/mini-chat-view/src/components/MessageItem/index.scss
@@ -50,6 +50,14 @@
     margin-top: 0;
   }
 
+  & .messageItemContent span {
+    user-select: text !important;
+  }
+
+  & .messageItemContent a {
+    user-select: text !important;
+  }
+
   & .messageItemContent p:last-of-type {
     user-select: text !important;
     margin-bottom: 0;
@@ -145,4 +153,19 @@
 
 j-tooltip::part(base) {
   display: inline;
+}
+
+.neighbourhoodCards {
+  background: var(--app-drawer-bg-color);
+  padding: 20px;
+  margin: 10px 60px 0 10px;
+  border-radius: 10px; 
+  border-left: solid 6px var(--app-main-sidebar-bg-color);
+  position: relative;
+}
+
+.neighbourhoodCardsClose {
+  position: absolute;
+  top: 0;
+  right: 30px;
 }
